@@ -4,6 +4,12 @@ NCKU CSIE
 
 Program-Design II project
 
-我們可能要做成2D橫向了~~
+程式本體在Main資料夾,編譯指令如下
 
-<(_ _)>
+編譯
+
+javac --module-path C:/javafx-sdk-16/lib --add-modules javafx.controls,javafx.media -encoding UTF8 Main.java
+
+執行
+
+java --module-path C:/javafx-sdk-16/lib --add-modules javafx.controls,javafx.media Main
